# local_srt

./: .gitignore  LICENSE  README.md  local_srt.py  pyproject.toml
example_configs/: podcast_config.json  yt_config.json
src/local_srt/: __init__.py  audio.py  batch.py  cli.py  config.py  logging_utils.py  model_management.py  models.py  output_writers.py  subtitle_generation.py  system.py  text_processing.py  whisper_wrapper.py
tests/: README.md  __init__.py  test_audio.py  test_batch.py  test_config.py  test_logging_utils.py  test_models.py  test_output_writers.py  test_subtitle_generation.py  test_system.py  test_text_processing.py
