[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-srt"
version = "0.1.1"
description = "Local SRT generator using faster-whisper + ffmpeg"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Timothy Eck", email = "public@verbumcaro.com" }
]
keywords = ["subtitles", "srt", "whisper", "faster-whisper", "ffmpeg", "transcription"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Multimedia :: Video",
  "Topic :: Utilities",
]

# Core Python dependencies (system dependency ffmpeg is documented in README)
dependencies = [
  "faster-whisper>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/pulsence/local_srt"
Repository = "https://github.com/pulsence/local_srt"
Issues = "https://github.com/pulsence/local_srt/issues"

[project.scripts]
srtgen = "local_srt.cli:main"

# -----------------------------
# setuptools configuration
# -----------------------------
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"local_srt" = ["configs/*.json"]


# -----------------------------
# MyPy (optional)
# -----------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false